# fedn-cpp-client

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.yaml  clientlib.cpp  clientlib.h  fednlib.cpp  fednlib.h  http_client.cpp  my_client.cpp  rpc.cpp
.ci/studio/: build_deps.sh  build_example.sh  requirements.txt  studio.sh
.github/workflows/: build.yaml  integration-test-studio.yaml
examples/: CMakeLists.txt  mnist-pytorch.cpp  my_client.cpp
examples/attribute_example/: CMakeLists.txt  README.md  main.cpp
examples/mnist-libtorch/: CMakeLists.txt  README.md  mnist-libtorch.cpp
examples/mnist-libtorch-cnpy/: CMakeLists.txt  README.md
examples/mnist-libtorch-stdvec/: .gitignore  CMakeLists.txt  README.md  mnist-libtorch-stdvec.cpp  mnist-libtorch.cpp
examples/my-client/: CMakeLists.txt  my-client.cpp
include/: fednlib.h
include/fednlib/: fedn.h  grpc.h  http.h  utils.h
protos/: fedn.proto
src/: fedn.cpp  fednlib.cpp  grpc.cpp  http.cpp  utils.cpp
src/protos/: fedn.proto
